infra/k8s/prescriptions-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prescriptions-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prescriptions
  template:
    metadata:
      labels:
        app: prescriptions
    spec:
      containers:
        - name: prescriptions
          image: insonia78/services/prescriptions
---
apiVersion: v1
kind: Service
metadata:
  name: prescriptions-srv
spec:
  selector:
    app: prescriptions
  ports:
    - name: prescriptions
      protocol: TCP
      port: 4000
      targetPort: 4000
