infra/k8s/text-messages-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: text-messages-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: text-messages
  template:
    metadata:
      labels:
        app: text-messages
    spec:
      containers:
        - name: text-messages
          image: insonia78/services/text_messages
---
apiVersion: v1
kind: Service
metadata:
  name: text-messages-srv
spec:
  selector:
    app: text-messages
  ports:
    - name: text-messages
      protocol: TCP
      port: 7000
      targetPort: 7000
